--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,17 @@
 {
 	"arrowParens": "always",
-	"printWidth": 180,
+	"printWidth": 120,
 	"singleQuote": true,
 	"tabWidth": 4,
 	"trailingComma": "all",
-	"useTabs": true
+	"useTabs": true,
+	"overrides": [
+		{
+			"files": "*.yml",
+			"options": {
+				"tabWidth": 2,
+				"useTabs": false
+			}
+		}
+	]
 }
